--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -601,6 +601,7 @@
 										<exclude>commons-collections:commons-collections:[3.0,3.2.1]</exclude>
 										<exclude>commons-collections:commons-collections:4.0</exclude>
 										<!-- Avoid log4shell -->
+										<!--XXX require 2.16.0 once released -->
 										<exclude>org.apache.logging.log4j:log4j-api:(,2.15.0)</exclude>
 										<exclude>org.apache.logging.log4j:log4j-core:(,2.15.0)</exclude>
 									</excludes>
